2001-11-20  Kevin B. Kenny  <kennykb@users.sourceforge.net>

	* generic/tclCmdMZ.c (Tcl_TimeObjCmd) Added extra parentheses to a
	cast expression to remove ambiguity and conform with Tcl
	Engineering Manual. [Suggestion by Donal Fellows in commentary on
	patch #483500]
	
2001-11-19  Kevin B. Kenny  <kennykb@users.sourceforge.net>
	
	* generic/tclCmdMZ.c (Tcl_TimeObjCmd): Corrected bug in [time]
	when dealing with test sequences that run more than 2**31
	microseconds. [Bug 478847]
	
2001-11-09  Don Porter  <dgp@users.sourceforge.net>

        * tests/var.test:
        * generic/tclVar.c: Corrected bug in [global] when dealing
        with variable names matching :*.  [Bug 480176]

2001-11-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net> 

	* generic/tclIO.c (ReadChars): Fixed bug #478856 reported by
	  Stuart Cassoff <stwo@users.sourceforge.net>. The bug caused loss
	  of fileevents when [read]ing less data from the channel than
	  buffered. Due to an empty input buffer the flag
	  CHANNEL_NEED_MORE_DATA was set but never reset, causing the I/O
	  system to wait for more data instead of using a timer to
	  synthesize fileevents and to flush the pending data out of the
	  buffers.

2001-10-19  Jeff Hobbs  <jeffh@ActiveState.com>

	************************
	****  8.3.4 TAGGED  ****
	************************

	* generic/tclInt.h: 
	* generic/tclObj.c: added -DPURIFY object allocation option.

	* unix/configure:
	* unix/tcl.m4: added -lc to LIBS on AIX

2001-10-19  Daniel Steffen <das@users.sourceforge.net>

	* mac/tclMacFile.c: fix to glob -join, wasn't traversing aliased
	folders
	
	* mac/tclMacLoad.c: : corrected utf8 handling, comparison of
	package names to code fragment names changed to only match on the
	length of package name, this allows for fragment names with version
	numbers appended (backport from 8.4)

2001-10-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure: regend
	* unix/tcl.m4 (SC_ENABLE_GCC): enabled better recognition of gcc.
